[tool.poetry]
name = "sauce-aggregator"
version = "0.1.0"
description = "Aggregate links from a given webpage"
authors = ["Maor Kadosh <git@avocadosh.xyz>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.2"
linkpreview = "^0.1.12"
requests = "^2.25.1"
colorama = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
